# work_staff

./: README.md
db_browser/: READ.MD  alembic.ini  app_db.db  main.py  pyproject.toml
db_browser/alembic/versions/: 3640ba2e2b86_baseline.py
db_browser/app/controllers/: app_controller.py  app_db.db
db_browser/app/db/: __init__.py
db_browser/app/db/models/: message.py  pessoa.py
db_browser/app/db/repository/: repository.py
db_browser/app/ui/: __init__.py
workhelp/: Muxara.csv  helpr.py  main.py  tabledata_20220904_141437.csv  test.py  transferencias_em_falta.csv
workhelp/app/: app.py  constants.py  css.css
workhelp/app/controllers/: home_controller.py  test.py
workhelp/app/db/: repository.py
workhelp/app/db/models/: transferences.py
workhelp/app/views/home_page/: __init__.py  import requests.py  settings.py
workhelp/app/views/home_page/componets/: componets.py  regist_form.py
workhelp/app/views/iva_calc/: __init__.d.py  __init__.deprecated.py  __init__.py
